add debug option

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         "type": "shell",
         "command": "g++",
         "args": [
-            "-o", "${fileBasenameNoExtension}", "${fileBasename}"
+            "-g", "-o", "${fileBasenameNoExtension}", "${fileBasename}"
         ],
         "group": {
             "kind": "build",
